--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ width: 50px;
 
 
 	<div class="header">
-		<img src="F:\wamp64\www\Hospital\Quote-Quote2000-The-best-way-to-cheer-yourself-1024x576 - Copy.jpg" width="100%" height="10%">
+		<img src="Copy.jpg" width="100%" height="10%">
 		<div id="heading">
 			ELECTRO INDIA SCHEME
 		</div>
