--- a/contacts.html
+++ b/contacts.html
@@ -13,12 +13,13 @@
 			background-color: darkorange;
 			font-family: 'Exo', sans-serif;
 			text-align: center;
-			font-size: 35px;
+			font-size: 3rem;
 		}
 
 
 		.content{
-			font-size: 20px;
+			font-size: 1.5rem;
+			padding-left: 35%;
 		}
 
 
@@ -37,18 +38,28 @@
 	</div>
 
 	<div class="content">
-		<pre>
-			NAME           : SHUBHENDRA MOHAN JHA
+		<table>
 
-			CONTACT NUMBER : 9931115472,7004373511
+			<tr>
+				<td>NAME</td>
+				<td>: SHUBHENDRA MOHAN JHA</td>
+			</tr>
+			<tr>
+				<td>CONTACT NUMBER</td>
+				<td> : 9931115472,7004373511</td>
+			</tr>
+			<tr>
+				<td>EMAIL-ID</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>ADDRESS</td>
+				<td></td>
+			</tr>
+			
+        </table>
 
-			EMAIL-ID       : 
-
-			ADDRESS        :  
-
-
-
-		</pre>
+		
 		
 	</div>
 
