--- a/contacts.html
+++ b/contacts.html
@@ -46,15 +46,15 @@
 
 			<tr>
 				<td>NAME</td>
-				<td>: SHUBHENDRA MOHAN JHA</td>
+				<td>: ELECTRO INDIA COMPANY</td>
 			</tr>
 			<tr>
 				<td>CONTACT NUMBER</td>
-				<td> : 9931115472,7004373511</td>
+				<td> : COMMING SOON!!!</td>
 			</tr>
 			<tr>
 				<td>EMAIL-ID</td>
-				<td></td>
+				<td>ELECTROINDIASCHEME@GMAIL.COM</td>
 			</tr>
 			<tr>
 				<td>ADDRESS</td>
